kubernetes/alephium-devnet/alephium-nft.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alephium-nft
  name: alephium-nft
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alephium-nft
  template:
    metadata:
      labels:
        app: alephium-nft
      name: alephium-nft
    spec:
      containers:
      - name: alephium-nft
        image: liuhongchao/alephium-nft:0.1.3
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: alephium-nft
spec:
  selector:
    app: alephium-nft
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
