kubernetes/alephium-devnet/alephium-node.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: alephium
  name: alephium
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alephium
  template:
    metadata:
      # No prometheus scraping
      # annotations:
      #   prometheus.io/path: /metrics
      #   prometheus.io/port: "12973"
      #   prometheus.io/scheme: http
      #   prometheus.io/scrape: "true"
      labels:
        app: alephium
      name: alephium
    spec:
      containers:
      - name: alephium
        image: liuhongchao/dev-alephium:1.5.0-rc6_3-daf80bdf-SNAPSHOT-jdk17
        imagePullPolicy: Always
        ports:
          - containerPort: 12973
        volumeMounts:
          - mountPath: "/alephium-home/.alephium"
            name: alephium-home
            subPath: .alephium
          - mountPath: "/alephium-home/.alephium/user.conf"
            name: alephium-configs
            subPath: user.conf
          - mountPath: "/alephium-home/file-uploads"
            name: file-uploads
            subPath: file-uploads
      securityContext:
        fsGroup: 65534  # user id of the `nobody` user
      volumes:
        - name: alephium-home
          persistentVolumeClaim:
            claimName: alephium-blockchain-pvc-claim-2
        - name: alephium-configs
          configMap:
            name: alephium-configs
        - name: file-uploads  # required by http post
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: alephium
spec:
  selector:
    app: alephium
  ports:
    - name: http
      protocol: TCP
      port: 22973
      targetPort: 22973
    - name: ws
      protocol: TCP
      port: 21973
      targetPort: 21973
    - name: p2p
      protocol: TCP
      port: 19973
      targetPort: 19973
    - name: miner
      protocol: TCP
      port: 20973
      targetPort: 20973
  type: ClusterIP
