kubernetes/alephium-devnet/alephium-ingress.yaml
# This is for exposing the https://alephium.softfork.se website.
# Requires [cert-manager](https://cert-manager.io/docs/) to be installed
# in your k8s cluster
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-dev-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium-dev.softfork.se
    secretName: alephium-dev-softfork-se-tls
  rules:
  - host: alephium-dev.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alephium
            port:
              number: 22973
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-dev-explorer-api-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium-dev-explorer-api.softfork.se
    secretName: alephium-dev-explorer-api-softfork-se-tls
  rules:
  - host: alephium-dev-explorer-api.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-dev-explorer-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium-dev-explorer.softfork.se
    secretName: alephium-dev-explorer-softfork-se-tls
  rules:
  - host: alephium-dev-explorer.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: explorer-frontend
            port:
              number: 3000
      - path: /explorer-backend-docs
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /blocks
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /transactions
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /addresses
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/average-block-times
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /charts/hashrates
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/supply/total-alph
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/supply/circulating-alph
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/total-transactions
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
      - path: /infos/heights
        pathType: Prefix
        backend:
          service:
            name: explorer-backend
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-nft-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium-nft.softfork.se
    secretName: alephium-nft-softfork-se-it-tls
  rules:
  - host: alephium-nft.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: alephium-nft
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-portal-bridge-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium-portal-bridge.softfork.se
    secretName: alephium-portal-bridge-softfork-se-it-tls
  rules:
  - host: alephium-portal-bridge.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bridge-ui
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-wormhole-explorer-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium-wormhole-explorer.softfork.se
    secretName: alephium-wormhole-explorer-softfork-se-it-tls
  rules:
  - host: alephium-wormhole-explorer.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: explorer
            port:
              number: 8001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alephium-wormhole-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - alephium-wormhole.softfork.se
    secretName: alephium-wormhole-softfork-se-it-tls
  rules:
  - host: alephium-wormhole.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guardian
            port:
              number: 7071
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eth-dev-softfork-se-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - eth-dev.softfork.se
    secretName: eth-dev-softfork-se-it-tls
  rules:
  - host: eth-dev.softfork.se
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eth-devnet
            port:
              number: 8545
